compiler/tools/fpp-check/test/component_instance_def/int_out_of_range.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/component_instance_def/int_out_of_range.fpp: 5.23
instance c: C base id 0x80000000
                      ^
error: invalid integer value 2147483648
value out of range
